--- a/assest/css/styles.css
+++ b/assest/css/styles.css
@@ -1,166 +1,171 @@
 :root {
-    /* colors */
---primary: #B5A1E5; 
---on-primary: #100E17; 
---background: #131214;
---on-background: #EAE6F2;
---surface: #1D1C1F;
---on-surface: #DDDAE5;
---on-surface-variant: #7B7980; 
---on-surface-variant-2: #B9B6BF;
---outline: #3E3D40;
---bg-aqi-1: #89E589;
---on-bg-aqi-1: #1F331F;
---bg-aqi-2: #E5DD89;
---on-bg-aqi-2: #33311F;
---bg-aqi-3: #E5C089;
---on-bg-aqi-3: #332B1F;
---bg-aqi-4: #E58989;
---on-bg-aqi-4: #331F1F;
---bg-aqi-5: #E589B7;
---on-bg-aqi-5: #331F29;
---white: hsl(0, 0%, 100%);
---white-alpha-4: hsla(0, 0%, 100%, 0.04);
---white-alpha-8: hsla(0, 0%, 100%, 0.08);
---black-alpha-10: hsla(0, 0%, 0%, 0.1);
+  /* colors */
+  --primary: #b5a1e5;
+  --on-primary: #100e17;
+  --background: #131214;
+  --on-background: #eae6f2;
+  --surface: #1d1c1f;
+  --on-surface: #dddae5;
+  --on-surface-variant: #7b7980;
+  --on-surface-variant-2: #b9b6bf;
+  --outline: #3e3d40;
+  --bg-aqi-1: #89e589;
+  --on-bg-aqi-1: #1f331f;
+  --bg-aqi-2: #e5dd89;
+  --on-bg-aqi-2: #33311f;
+  --bg-aqi-3: #e5c089;
+  --on-bg-aqi-3: #332b1f;
+  --bg-aqi-4: #e58989;
+  --on-bg-aqi-4: #331f1f;
+  --bg-aqi-5: #e589b7;
+  --on-bg-aqi-5: #331f29;
+  --white: hsl(0, 0%, 100%);
+  --white-alpha-4: hsla(0, 0%, 100%, 0.04);
+  --white-alpha-8: hsla(0, 0%, 100%, 0.08);
+  --black-alpha-10: hsla(0, 0%, 0%, 0.1);
 
-/* gradient color */
---gradient-1: linear-gradient(180deg, hsla(270, 5%, 7%, 0) 0%, hsla(270, 5%, 7%, 0.8) 65%, hsl(270, 5%, 7%) 100%);
---gradient-2: linear-gradient(180deg, hsla(260, 5%, 12%, 0) 0%, hsla(260, 5%, 12%, 0.8) 65%, hsl(260, 5%, 12%) 100%);
+  /* gradient color */
+  --gradient-1: linear-gradient(
+    180deg,
+    hsla(270, 5%, 7%, 0) 0%,
+    hsla(270, 5%, 7%, 0.8) 65%,
+    hsl(270, 5%, 7%) 100%
+  );
+  --gradient-2: linear-gradient(
+    180deg,
+    hsla(260, 5%, 12%, 0) 0%,
+    hsla(260, 5%, 12%, 0.8) 65%,
+    hsl(260, 5%, 12%) 100%
+  );
 
-/* font */
---ff-nunito-sans: 'Nunito Sans', sans-serif;
+  /* font */
+  --ff-nunito-sans: 'Nunito Sans', sans-serif;
 
---heading: 5.6rem;
---title-1: 2rem;
---title-2: 1.8rem;
---title-3: 1.6rem;
---body-1: 2.2rem;
---body-2: 2rem;
---body-3: 1.6rem;
---label-1: 1.4rem;
---label-2: 1.2rem;
+  --heading: 5.6rem;
+  --title-1: 2rem;
+  --title-2: 1.8rem;
+  --title-3: 1.6rem;
+  --body-1: 2.2rem;
+  --body-2: 2rem;
+  --body-3: 1.6rem;
+  --label-1: 1.4rem;
+  --label-2: 1.2rem;
 
---weight-regular: 400;
---weight-semiBold: 600;
+  --weight-regular: 400;
+  --weight-semiBold: 600;
 
-/* shadow */
---shadow-1: 0px 1px 3px hsla(0, 0%, 0%, 0.5);
---shadow-2: 0px 3px 6px hsla(0, 0%, 0%, 0.4);
+  /* shadow */
+  --shadow-1: 0px 1px 3px hsla(0, 0%, 0%, 0.5);
+  --shadow-2: 0px 3px 6px hsla(0, 0%, 0%, 0.4);
 
-/* border radius */
---radius-28: 28px;
---radius-16: 16px;
---radius-pill: 500px;
---radius-circle: 50%;
+  /* border radius */
+  --radius-28: 28px;
+  --radius-16: 16px;
+  --radius-pill: 500px;
+  --radius-circle: 50%;
 
-/* transition */
---transition-short: 100ms ease;
-
+  /* transition */
+  --transition-short: 100ms ease;
 }
 
 /* Reset */
-html{
-    font-family: var(--ff-nunito-sans);
-    font-size: 10px;
-    scroll-behavior: smooth;
+html {
+  font-family: var(--ff-nunito-sans);
+  font-size: 10px;
+  scroll-behavior: smooth;
 }
 
-body{
-    background-color: #131214;
-    color: var(--on-background);
-    font-size: var(--body-3);
-    overflow: hidden;
-    
+body {
+  background-color: #131214;
+  color: var(--on-background);
+  font-size: var(--body-3);
+  overflow: hidden;
 }
 
 *,
 *::after,
-*::before{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
 
-a{
-    display: block;
-    color: inherit;
-    text-decoration: none;
+a {
+  display: block;
+  color: inherit;
+  text-decoration: none;
 }
 
-img{
-    display: block;
-    height: auto;
+img {
+  display: block;
+  height: auto;
 }
 
-
-span{
-    display: block;
+span {
+  display: block;
 }
 
 input,
-button{
-    display: block;
-    background: none;
-    border: none;
-    color: inherit;
+button {
+  display: block;
+  background: none;
+  border: none;
+  color: inherit;
 }
 
-input{
-    width: 100%;
+input {
+  width: 100%;
 }
 
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 
- sub{
-    vertical-align: baseline;
- }
-
- sup{
-    vertical-align: top;
- }
-
- sub,
- sup{
-    font-size: 0.75em;
- }
-
- 
-:focus-visible{
-    outline: 2px solid var(--white);
+sub {
+  vertical-align: baseline;
 }
 
-::selection{
-background-color: var(--white-alpha-8);
+sup {
+  vertical-align: top;
 }
 
-::-webkit-scrollbar{
+sub,
+sup {
+  font-size: 0.75em;
+}
+
+:focus-visible {
+  outline: 2px solid var(--white);
+}
+
+::selection {
+  background-color: var(--white-alpha-8);
+}
+
+::-webkit-scrollbar {
   width: 6px;
-  height: 6px;   /*for horizontal scrollbar */
+  height: 6px; /*for horizontal scrollbar */
 }
 
-::-webkit-scrollbar-thumb{
-    background-color: var(--white-alpha-8);
-    border-radius: var(--radius-pill);
+::-webkit-scrollbar-thumb {
+  background-color: var(--white-alpha-8);
+  border-radius: var(--radius-pill);
 }
-
 
 /* Icon */
 
-@font-face{
-    font-family: 'Material Symbols Rounded';
-    font-style: normal;
-    font-weight: 400;
-    src: url(../font/material-symbol-rounded.woff2) format('woff2');
+@font-face {
+  font-family: 'Material Symbols Rounded';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../font/material-symbol-rounded.woff2) format('woff2');
 }
 
-.m-icon{
+.m-icon {
   font-family: 'Material Symbols Rounded';
   font-weight: normal;
   font-style: normal;
@@ -182,59 +187,67 @@ background-color: var(--white-alpha-8);
 
 /* Utility style */
 
-.weather-container{
-    max-width: 1600px;
-    width: 100%;
-    margin-inline: auto;
-    padding: 16px;
+.container {
+  max-width: 1600px;
+  width: 100%;
+  margin-inline: auto;
+  padding: 16px;
 }
 
-.icon-btn{
- display: grid;
- place-items: center;
- width: 48px;
- height: 48px;
- background-color: var(--white-alpha-8); 
- border-radius: var(--radius-circle); 
+.icon-btn {
+  display: grid;
+  place-items: center;
+  width: 48px;
+  height: 48px;
+  background-color: var(--white-alpha-8);
+  border-radius: var(--radius-circle);
 }
 
-.has-state{
-    position: relative;
+.has-state {
+  position: relative;
 }
 
-.has-state:hover{box-shadow: var(--shadow-1);}
-
-.has-state:is(:focus, :focus-wisible){box-shadow: none  ;}
-
-.has-state::before{
-    content: "";
-    position: absolute;
-    inset: 0;
-    border-radius: inherit;
-    clip-path: circle(100% at 50% 50%);
-    transition: var(--transition-short);
+.has-state:hover {
+  box-shadow: var(--shadow-1);
 }
 
-.has-state:hover::before{
-    background-color: var(--white-alpha-4);
+.has-state:is(:focus, :focus-wisible) {
+  box-shadow: none;
 }
 
-.has-state:is(:focus, :focus-wisible)::before{
-    background-color: var(--white-alpha-8);
-    animation: ripple 250s ease forwards ;
+.has-state::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  clip-path: circle(100% at 50% 50%);
+  transition: var(--transition-short);
+}
+
+.has-state:hover::before {
+  background-color: var(--white-alpha-4);
+}
+
+.has-state:is(:focus, :focus-wisible)::before {
+  background-color: var(--white-alpha-8);
+  animation: ripple 250s ease forwards;
 }
 
 @keyframes ripple {
-    0% {clip-path: circle(100% at 50% 50%);}
-    100% {clip-path: circle(0% at 50% 50%);}
+  0% {
+    clip-path: circle(100% at 50% 50%);
+  }
+  100% {
+    clip-path: circle(0% at 50% 50%);
+  }
 }
 
-.btn-primary{
+.btn-primary {
   display: flex;
   align-items: center;
   gap: 16px;
   padding-inline: 16px;
-  
+
   height: 48px;
   line-height: 48px;
   max-width: max-content;
@@ -244,152 +257,263 @@ background-color: var(--white-alpha-8);
   border-radius: var(--radius-pill);
 }
 
-.btn-primary .span{
-    font-weight: var(--weight-semiBold);
+.btn-primary .span {
+  font-weight: var(--weight-semiBold);
 }
 
-.btn-primary[disabled]{
-    background-color: var(--outline);
-    color: var(--on-surface-variant);
-    cursor: not-allowed;
+.btn-primary[disabled] {
+  background-color: var(--outline);
+  color: var(--on-surface-variant);
+  cursor: not-allowed;
 }
 
-.btn-primary[disabled]::before{
-  display: none;  
+.btn-primary[disabled]::before {
+  display: none;
 }
 
+.card {
+  background-color: var(--surface);
+  color: var(--on-surface);
+}
+
+.card-lg {
+  border-radius: var(--radius-28);
+  padding: 20px;
+}
+
+.card-sm {
+  border-radius: var(--radius-16);
+  padding: 16px;
+}
+
+.heading {
+  color: var(--white);
+  font-size: var(--heading);
+  line-height: 1.1;
+}
+
+.title-1 {
+  font-size: var(--title-1);
+}
+
+.title-2 {
+  font-size: var(--title-2);
+  margin-block-end: 12px;
+}
+
+.title-3 {
+  font-size: var(--title-3);
+  font-weight: var(--weight-semiBold);
+}
+
+.body-1 {
+  font-size: var(--body-1);
+}
+
+.body-2 {
+  font-size: var(--body-2);
+  font-weight: var(--weight-semiBold);
+}
+
+.body-3 {
+  font-size: var(--body-3);
+}
+
+.label-1 {
+  font-size: var(--label-1);
+}
+
+.label-2 {
+  font-size: var(--label-2);
+}
 
 /* Header */
 
-.header .btn-primary .span{
-    display: none;
+.header .btn-primary .span {
+  display: none;
 }
 
-.logo img{
-    width: 150px;
+.logo img {
+  width: 150px;
 }
 
-.header .weather-container,
-.header-action{
-    display: flex;
-    align-items: center;
+.header .container,
+.header-action {
+  display: flex;
+  align-items: center;
 }
 
-.header .weather-container{
-    justify-content: space-between;
+.header .container {
+  justify-content: space-between;
 }
 
-.header-action{
-    gap: 16px;
+.header-action {
+  gap: 16px;
 }
 
-.header .btn-primary{
-   padding-inline: 12px; 
+.header .btn-primary {
+  padding-inline: 12px;
 }
 
-.search-view{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    height: 100svh;   /*for mobile*/
-    background-color: var(--surface);
-    color: var(--on-surface);
-    clip-path: circle(4% at calc(100% - 102px) 5%);
-    opacity: 0;
-    visibility: hidden;
-    transition: clip-path 500ms ease;
-    z-index: 4;
+.search-view {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  height: 100svh; /*for mobile*/
+  background-color: var(--surface);
+  color: var(--on-surface);
+  clip-path: circle(4% at calc(100% - 102px) 5%);
+  opacity: 0;
+  visibility: hidden;
+  transition: clip-path 500ms ease;
+  z-index: 4;
 }
 
-.search-view.active{
-    opacity: 1;
-    visibility: visible;
-    clip-path: circle(130% at 73% 5%);
+.search-view.active {
+  opacity: 1;
+  visibility: visible;
+  clip-path: circle(130% at 73% 5%);
 }
 
-.search-wrapper{
-    position: relative;
-    border-bottom: 1px solid var(--outline);
+.search-wrapper {
+  position: relative;
+  border-bottom: 1px solid var(--outline);
 }
 
-.search-wrapper::before{
-    content: "";
-    position:absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 16px;
-    width: 24px;
-    height: 24px;
-    border: 3px solid var(--on-surface);
-    border-top-color: transparent;
-    border-radius: var(--radius-circle);
-    animation: loading 500ms linear infinite;
-    display: none;
+.search-wrapper::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  border: 3px solid var(--on-surface);
+  border-top-color: transparent;
+  border-radius: var(--radius-circle);
+  animation: loading 500ms linear infinite;
+  display: none;
 }
 
 @keyframes loading {
-    0% {transform: translateY(-50%) rotate(0);}
-     100% {transform: translateY(-50%) rotate(1turn);}
+  0% {
+    transform: translateY(-50%) rotate(0);
+  }
+  100% {
+    transform: translateY(-50%) rotate(1turn);
+  }
 }
 
-.search-wrapper:has(.searching)::before{
-    display: block;
+.search-wrapper:has(.searching)::before {
+  display: block;
 }
 
-.search-field{
+.search-field {
   height: 80px;
   line-height: 80px;
   padding-inline: 56px 16px;
-  outline: none;  
+  outline: none;
 }
 
-.search-field::placeholder{
-    color: var(--on-surface-variant-2);
+.search-field::placeholder {
+  color: var(--on-surface-variant-2);
 }
 
-.search-field::-webkit-search-cancel-button{
-    display: none;
+.search-field::-webkit-search-cancel-button {
+  display: none;
 }
 
-.search-wrapper .leading-icon{
-    position: absolute;
-    top: 50%;
-    left: 28px;
-    transform: translate(-50%, -50%);
+.search-wrapper .leading-icon {
+  position: absolute;
+  top: 50%;
+  left: 28px;
+  transform: translate(-50%, -50%);
 }
 
-.search-wrapper > .m-icon{
-    display: none;
+.search-wrapper > .m-icon {
+  display: none;
 }
 
-.search-wrapper .icon-btn{
-    background-color: transparent;
-    box-shadow: none;
+.search-wrapper .icon-btn {
+  background-color: transparent;
+  box-shadow: none;
 }
 
-.search-view .view-list{
+.search-view .view-list {
   padding: 8px 16px;
 }
 
-.search-view .view-item{
-    position: relative;
-    height: 56px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 16px;
-    padding-inline: 16px 24px;
+.search-view .view-item {
+  position: relative;
+  height: 56px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  padding-inline: 16px 24px;
 }
 
-
-.search-view .view-item :is(.m-icon, .item-subtitle){
-    color: var(--on-surface-variant);
+.search-view .view-item :is(.m-icon, .item-subtitle) {
+  color: var(--on-surface-variant);
 }
 
-.search-view .view-item .item-link{
-    position: absolute;
-    inset: 0;
-    box-shadow: none;
+.search-view .view-item .item-link {
+  position: absolute;
+  inset: 0;
+  box-shadow: none;
+}
+
+/* Main */
+
+.main {
+  height: calc(100vh- 80px);
+  height: calc(100svh-80px); /*for mobile*/
+  overflow: hidden;
+}
+
+.article.container {
+  position: relative;
+  display: grid;
+  grid-template-columns: minmax(0, 1fr);
+  gap: 20px;
+  height: 100%;
+  overflow-y: auto; /*for desk*/
+  overflow-y: overlay;
+}
+
+.article.container::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.article.container:is(:hover, :focus-within)::-webkit-scrollbar-thumb {
+  background-color: var(--white-alpha-8);
+}
+
+.article.container::-webkit-scrollbar-bottom {
+  height: 10px;
+}
+
+.article.container::before {
+  content: '';
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-image: var(--gradient-1);
+  pointer-events: none;
+  z-index: 1;
+}
+
+.section:not(:last-child) {
+  margin-block-end: 16px;
+}
+
+/* Current weather */
+
+.current-weather-card .wrapper {
+  margin-block: 12px;
+  gap: 8px;
+  align-items: center;
 }
