--- a/assest/css/styles.css
+++ b/assest/css/styles.css
@@ -41,15 +41,15 @@
   /* font */
   --ff-nunito-sans: 'Nunito Sans', sans-serif;
 
-  --heading: 5.6rem;
-  --title-1: 2rem;
-  --title-2: 1.8rem;
-  --title-3: 1.6rem;
-  --body-1: 2.2rem;
-  --body-2: 2rem;
-  --body-3: 1.6rem;
-  --label-1: 1.4rem;
-  --label-2: 1.2rem;
+  --heading: 56px;
+  --title-1: 20px;
+  --title-2: 18px;
+  --title-3: 16px;
+  --body-1: 22px;
+  --body-2: 20px;
+  --body-3: 16px;
+  --label-1: 14px;
+  --label-2: 12px;
 
   --weight-regular: 400;
   --weight-semiBold: 600;
@@ -329,7 +329,7 @@ sup {
 
 /* Header */
 
-.header .btn-primary .span {
+.span-location {
   display: none;
 }
 
@@ -337,13 +337,13 @@ sup {
   width: 150px;
 }
 
-.header .container,
+.header-container,
 .header-action {
   display: flex;
   align-items: center;
 }
 
-.header .container {
+.header-container {
   justify-content: space-between;
 }
 
@@ -351,7 +351,7 @@ sup {
   gap: 16px;
 }
 
-.header .btn-primary {
+.header-btn-primary {
   padding-inline: 12px;
 }
 
@@ -371,7 +371,7 @@ sup {
   z-index: 4;
 }
 
-.search-view.active {
+.search-view:active {
   opacity: 1;
   visibility: visible;
   clip-path: circle(130% at 73% 5%);
@@ -425,27 +425,27 @@ sup {
   display: none;
 }
 
-.search-wrapper .loading-icon {
+.loading-icon {
   position: absolute;
   top: 50%;
   left: 28px;
   transform: translate(-50%, -50%);
 }
 
-.search-wrapper > .m-icon {
+.search-icon {
   display: none;
 }
 
-.search-wrapper .icon-btn {
+.search-icon-btn {
   background-color: transparent;
   box-shadow: none;
 }
 
-.search-view .view-list {
+.view-list {
   padding: 8px 16px;
 }
 
-.search-view .view-item {
+.view-item {
   position: relative;
   height: 56px;
   display: flex;
@@ -455,11 +455,11 @@ sup {
   padding-inline: 16px 24px;
 }
 
-.search-view .view-item :is(.m-icon, .item-subtitle) {
+.view-item :is(.m-icon, .item-subtitle) {
   color: var(--on-surface-variant);
 }
 
-.search-view .view-item .item-link {
+.view-item-link {
   position: absolute;
   inset: 0;
   box-shadow: none;
@@ -468,8 +468,8 @@ sup {
 /* Main */
 
 main {
-  height: calc(100vh- 80px);
-  height: calc(100svh-80px); /*for mobile*/
+  height: calc(100vh - 80px);
+  height: calc(100svh - 80px); /*for mobile*/
   overflow: hidden;
 }
 
@@ -499,6 +499,7 @@ main {
   content: '';
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 40px;
   background-image: var(--gradient-1);
@@ -512,18 +513,18 @@ main {
 
 /* Current weather */
 
- .current-wc-wrapper {
+ .current-temperature-day {
   margin-block: 12px;
   display: flex;
   gap: 8px;
   align-items: center;
 }
 
- .weather-icon{
+ .now-weather-icon{
   margin-inline: auto;
 }
 
- .current-weather-card >.body-3{
+ .description{
   text-transform: capitalize;
 }
 
@@ -545,4 +546,165 @@ main {
 
  .meta-text{
   color: var(--on-surface-variant);
+}
+
+/* Forecast 5 day */
+
+.forecast-card .title-2{
+  margin-block-end: 0;
+}
+
+
+.forecast-item, .icon-wrapper{
+  display: flex;
+  align-items: center;
+}
+
+.forecast-item:not(:last-child){
+  margin-block-end: 12px;
+}
+
+.icon-wrapper{
+  gap: 8px;
+}
+
+.forecast-card .label-1{
+  font-weight: var(--weight-semiBold);  
+  color: var(--on-surface-variant);
+  width: 100%;
+  text-align: right;
+}
+
+.label-mounth{
+  width: 100%;
+  text-align: right;
+}
+
+/* Highlights */
+
+.highlights .m-icon{
+  font-size: 32px;
+}
+
+.highlights-list {
+  display: grid;
+  gap: 20px;
+}
+
+ .title-3{
+  color: var(--on-surface-variant);
+  margin-block-end: 20px;
+}
+
+.highlights .card-sm{
+  position: relative;
+  background-color: var(--black-alpha-10);
+}
+
+.wrapper, .card-list, .card-item{
+  display: flex;
+  align-items: center;
+}
+
+.wrapper{
+  justify-content: space-between;
+}
+
+.card-list{
+  flex-wrap: wrap;
+  flex-grow: 1;
+  row-gap: 8px;
+}
+
+.card-item{
+  width: 50%;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+.highlights-card .label-1{
+  color: var(--on-surface-variant);
+}
+
+.badge{
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  padding: 2px 12px;
+  border-radius: var(--radius-pill);
+  font-weight: var(--weight-semiBold);
+  cursor: help;
+}
+
+.badge.aqi-1{
+  background-color: var(--bg-aqi-1);
+  color: var(--on-bg-aqi-1);
+}
+
+.badge.aqi-2{
+  background-color: var(--bg-aqi-2);
+  color: var(--on-bg-aqi-2);
+}
+
+.badge.aqi-3{
+  background-color: var(--bg-aqi-3);
+  color: var(--on-bg-aqi-3);
+}
+
+.badge.aqi-4{
+  background-color: var(--bg-aqi-4);
+  color: var(--on-bg-aqi-4);
+}
+
+.badge.aqi-5{
+  background-color: var(--bg-aqi-5);
+  color: var(--on-bg-aqi-5);
+}
+
+.two .card-item{
+  justify-content: flex-start;
+}
+
+.two .label-1{
+  margin-block-end: 4px;
+}
+
+/* Hourly Forecast */
+
+.slider-container{
+  overflow-x: auto;
+  margin-inline: -16px;
+}
+
+.slider-container::-webkit-scrollbar{
+  display: none;
+}
+
+.slider-list{
+  display: flex;
+  gap: 12px;
+}
+
+.slider-list:first-child{
+  margin-block-end: 16px;
+}
+
+.slider-list::before,
+.slider-list::after{
+  content: "";
+  min-width: 4px;
+}
+
+.slider-item{
+  min-width: 110px;
+  flex: 1 1 100%;
+}
+
+.slider-card{
+  text-align: center;
+}
+
+.weather-icon{
+  margin-inline: auto;
+  margin-block: 12px;
 }
