--- a/assest/css/styles.css
+++ b/assest/css/styles.css
@@ -385,6 +385,18 @@ sup {font-size: 0.75em;}
   transform: translate(-50%, -50%);
 }
 
+.search-wrapper .close-btn {
+  position: absolute;
+  top: 50%;
+  right: 34px;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.search-wrapper .close-btn.active {
+  display: block;
+}
+
 .search-wrapper > .m-icon { display: none;}
 
 .search-wrapper .icon-btn {
